service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blogtinylab-svc
  namespace: dev
spec:
  selector:
     app: blogtinylab-app
  ports:
   - protocol: TCP
     port: 80
