deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: blogtinylab-app
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: blogtinylab-app
    spec:
      containers:
        - name: blogtinylab-app
          image: registry.ng.bluemix.net/rtiffany/blogtinylab:20180403
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: blogtinylab-svc
spec:
  selector:
     app: blogtinylab-app
  ports:
   - protocol: TCP
     port: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blogtinylab-ingress
spec:
  tls:
  - hosts:
    - blog.tinylab.info
    secretName: blogtinylab
  rules:
  - host: blog.tinylab.info
    http:
      paths:
      - path: /
        backend:
          serviceName: blogtinylab-svc
          servicePort: 80
