ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blogtinylab-ingress
spec:
  tls:
  - hosts:
    - blog.tinylab.info
    secretName: blogtinylab
  rules:
  - host: blog.tinylab.info
    http:
      paths:
      - path: /
        backend:
          serviceName: blogtinylab-svc
          servicePort: 80
